# ttlcd

./: .gitignore  ARCHITECTURE.md  ISSUES.md  README.md  STATUS.md  pyproject.toml
.claude/skills/resolve-issue/: SKILL.md
.claude/skills/ttlcd/: SKILL.md
docs/: API.md  ARCHITECTURE.md
packaging/: 99-ttlcd.rules  paneld.service
scripts/: demo_multi_agent.py  demo_training.py
src/ttlcd_panel/: __init__.py  cli.py  client.py  daemon.py  driver.py  manager.py  metrics.py  render.py  server.py  views.py
tests/: conftest.py  test_agenda.py  test_client.py  test_lifecycle.py  test_manager.py  test_metrics.py  test_multirun.py  test_outcome.py  test_regressions.py  test_server.py  test_supervisor.py
