[project]
name = "ttlcd-panel"
version = "0.1.0"
description = "Daemon + SDK to drive a Thermaltake 3.9\" bar LCD panel: system/GPU stats, live ML training dashboards, messages, and a Claude mascot."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "joe" }]
dependencies = [
    "pyusb>=1.2.1",
    "pillow>=10.4.0",
    "psutil>=6.0.0",
    "nvidia-ml-py>=12.555.43",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "requests>=2.31.0",
]

[project.scripts]
paneld = "ttlcd_panel.daemon:main"
panel = "ttlcd_panel.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ttlcd_panel"]
